--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,15 @@ body{
   box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
 }
 
+@media (max-width: 415px) {
+
+    #titulo{
+        margin: 10px;
+        /* width: 70%; */
+    }
+    #head{
+        font-size: 40px;
+    }
+
+    
+}
